[package]
name = "egui_ui_refresh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.23", default-features = false }

[dev-dependencies]
eframe = { version = "0.23", default-features = false, features = ["glow"] }
